--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,8 +1,15 @@
 .nav {
     grid-area: n;
     background: darkolivegreen;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
-.item {
+.item a{
     color: white;
+    text-decoration: none;
+}
+
+.item a.active {
+    color: gold;
 }
